css/section/product-section.css
.product-container {
  width: 100%;
  padding-left: 16px;
}

.product__title {
  margin-bottom: 40px;
}

.product__slider {
  position: relative;
  margin-bottom: 43px;
}

.product__viewport {
  overflow-x: auto;
  scroll-behavior: smooth;
}

.product__viewport::-webkit-scrollbar,
.product__control {
  display: none;
}

.product__track {
  display: flex;
  gap: 32px;
}

.product__pagination {
  margin-top: 20px;
  text-align: center;
}

@media (width >= 768px) {
  .product-container {
    padding-left: 20px;
  }
}

@media (width >= 992px) {
  .product-container {
    max-width: 1200px;
    padding: 0;
    margin: 0 auto;
  }

  .product__viewport {
    overflow: hidden;
  }

  .product__control {
    display: flex;
    position: absolute;
  }

  .product__control--prev {
    top: 191px;
    left: -72px;
  }

  .product__control--next {
    top: 191px;
    right: -72px;
  }

  .product__track {
    justify-content: space-between;
    transition: transform 0.4s ease;
  }
}

